codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__slash_popup_si.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"› /side  start a side conversation in an ephemeral fork     "
"╭──────────────────────────────────────────── enter select ╮"
"┃ › /si                                                    │"
"┃                                                          │"
"╰ ↑↓ navigate · esc close ─────────────────────────────────╯"
